[package]
name = "generic-async-http-client"
version = "0.2.0"
authors = ["User65k <15049544+User65k@users.noreply.github.com>"]
edition = "2018"

repository = "https://github.com/User65k/generic-async-http-client"
description = "async HTTP(S) client"
license = "MIT"
keywords = ["http", "request", "client", "async"]
readme = "README.md"

[dependencies]
async-std = {version="1.9.0",optional=true}
async-h1 = {version="2.3",optional=true}
http-types = {version="2.11",optional=true}

hyper = { version = "0.14", optional=true }
serde_qs = { version ="0.8", optional=true }
serde_urlencoded = { version ="0.7", optional=true }
serde_json = {version="1.0",optional=true}
tokio = {version = "1.6", optional=true}

web-sys = {version = "0.3.4", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'],optional=true}
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"], optional=true}
js-sys = {version = "0.3.51",optional=true}
wasm-bindgen-futures = {version = "0.4.24",optional=true}


futures = "0.3"
log = "0.4"
serde = "1.0"
#pin-project = "1.0"

futures-rustls = {version="0.22.0",optional=true}
tokio-rustls = { version = "0.23.0", optional = true }
webpki-roots = {version="0.22.0",optional=true}
#rustls-native-certs

async-native-tls = { version = "0.4", default-features = false, optional = true }

cookie_store = { version = "0.15.0", optional = true }

[features]
use_hyper = ["tokio/net", "hyper/http1", "hyper/http2", "hyper/client", "hyper/runtime", "serde_qs", "serde_urlencoded","serde_json"]
use_async_h1 = ["async-std", "async-h1", "http-types"]
use_web_sys = ["web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]

cookies = ["cookie_store"]
proxies = []

rustls = ["futures-rustls", "tokio-rustls", "webpki-roots"]
async_native_tls = ["use_async_h1","async-native-tls/runtime-async-std"]
hyper_native_tls = ["use_hyper","async-native-tls/runtime-tokio"]

default = []

[dev-dependencies]
async-std = "1.9.0"
tokio = {version = "1.6.1", features=["rt", "net"]}
