[package]
name = "generic-async-http-client"
version = "0.6.1"
authors = ["User65k <15049544+User65k@users.noreply.github.com>"]
edition = "2021"

repository = "https://github.com/User65k/generic-async-http-client"
description = "async HTTP(S) client"
license = "MIT"
keywords = ["http", "request", "client", "async"]
readme = "README.md"

[dependencies]
async-std = {version="1",optional=true}
async-h1 = {version="2.3",optional=true}
http-types = {version="2.11",optional=true}

hyper = { version = "1.5", optional=true }
serde_qs = { version ="0.13", optional=true }
serde_urlencoded = { version ="0.7", optional=true }
serde_json = {version="1.0",optional=true}
tokio = {version = "1", optional=true}

web-sys = {version = "0.3", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'],optional=true}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional=true}
js-sys = {version = "0.3",optional=true}
wasm-bindgen-futures = {version = "0.4",optional=true}


futures = "0.3"
log = "0.4"
serde = "1.0"
#pin-project = "1.0"

futures-rustls = {version="0.26",  optional = true, default-features = false, features = ["tls12"]}
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["tls12"]}
webpki-roots = {version="0.26",    optional = true}
#rustls-native-certs

async-native-tls = { version = "0.5", default-features = false, optional = true }

cookie_store = { version = "0.21", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
use_hyper = ["tokio/net", "tokio/rt", "hyper/http1", "hyper/client", "serde_qs", "serde_urlencoded","serde_json"]
use_async_h1 = ["async-std", "async-h1", "http-types"]
use_web_sys = ["web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]

http2 = ["hyper/http2"]
cookies = ["cookie_store"]
proxies = ["async-trait", "tokio/io-util"]

rustls = ["rustls_ring"]
rustls_byoc    =   ["futures-rustls",           "tokio-rustls",           "webpki-roots"]
rustls_ring    =   ["futures-rustls/ring",      "tokio-rustls/ring",      "rustls_byoc"]
rustls_aws_lc_rs = ["futures-rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs", "rustls_byoc"]
rustls_fips    =   ["futures-rustls/fips",      "tokio-rustls/fips",      "rustls_byoc"]
async_native_tls = ["use_async_h1","async-native-tls/runtime-async-std"]
hyper_native_tls = ["use_hyper","async-native-tls/runtime-tokio"]

default = []

[dev-dependencies]
async-std = "1"
tokio = {version = "1", features=["rt", "net", "io-util"]}
serde = {version = "1.0", features=["derive"]}

[package.metadata.docs.rs]
features = ["proxies", "use_hyper"]
rustdoc-args = ["--cfg", "docsrs"]
